--- a/frontend/src/main/frontend/src/index.html
+++ b/frontend/src/main/frontend/src/index.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
-  <user>person tag</user>
+  <app-root>Loading...</app-root> <!--
+  <a routerLink="/users">Heroes</a>
+  <router-outlet></router-outlet> -->
+  <user></user>
 </body>
 </html>
