--- a/frontend/src/main/frontend/src/index.html
+++ b/frontend/src/main/frontend/src/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <title>Mercury</title>
   <base href="/mercury/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <!-- replaced by the root component of the application--> 
+  <app-component>Loading, please wait...</app-component>
 </body>
 </html>
